# embedded

./: .gitignore  hello.py  world.py
assignment1/cmake_part/: CMake.dockerfile  CMakeLists.txt  hello_world.c
assignment1/make_file/: Makefile  Makefile.dockerfile
assignment1/python_script/: Python.dockerfile
assignment1/turn_in_zip/: Makefile.dockerfile  hello.py  image_names.txt
assignment2/: CMakeLists.txt  Dockerfile  Makefile  README.txt  add_int.cpp  example  example.c  int_arithmetic.h  main.c  main.cpp  multiply_int.c  multiply_int.cpp  subtract_double.cpp
assignment2/double_lib/: add_double.cpp  divide_double.cpp  double_arithmetic.h  example_d  example_d.cpp
assignment2/int_lib/: add_int.c  divide_int.c  example  example.c  int_arithmetic.h  int_arithmetic.h.gch  subtract_int.c
assignment3/shared_libs/: CMakeLists.txt  Dockerfile  README.txt  divide_double.cpp  double_arithmetic.h  main.cpp  subtract_int.c
assignment3/shared_libs/doubles/: subtract_double.cpp
assignment3/x_compile/: hello.cpp
assignment4/x_compile/: hello
cross_compiliing/: SDK.dockerfile
examples/: test.py  test_m.py  test_u.py  yoyo.py
examples/shared_libs/: CMakeLists.txt  divide_int.c  int_arithmetic.h  main.cpp  multiply_double.cpp  multiply_int.c
examples/static_libraries/: README.txt  add.c  add.h  example  main.c  subtract.cpp  subtract.hpp
